[project]
    authors         = [{ name = "inf.teh@zagreb.hr" }]
    dependencies    = ["mkdocs (>=1.6.1,<2.0.0)", "mkdocs-material (>=9.7.1,<10.0.0)"]
    description     = "StatiÄna stranica s kazalom projekata koji koriste otvorene podatke."
    name            = "idx-potpore-otvoreni-podaci"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"


[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=2.0.0,<3.0.0"]
